# Black-Hole-Ray-Tracer

./: .cursorrules  .gitignore  AGENTS.md  MANIFEST.in  README.md  pyproject.toml  setup.py  shadow.ppm
.cursor/rules/: blackhole-ray-tracer.mdc
.github/workflows/: ci.yml
bridge/: README.md  module_phase2.cpp
docs/: AGENT_PROMPT.md  KERR_BOYER_LINDQUIST.md  KERR_PHYSICS.md  OVERVIEW.md  ROADMAP.md  STATE_API.md
docs/git/: CONTRIBUTIONS_GRAPH.md
kernel/: Makefile  README.md
kernel/cuda/: Makefile  README.md  bh_rt_schwarzschild_phase2_batch.cu
kernel/include/: bh_rt_rk4.h  bh_rt_schwarzschild_3d.h  bh_rt_schwarzschild_phase2.h  bh_rt_schwarzschild_phase2_batch.h  bh_rt_schwarzschild_phase2_internal.h  bh_rt_schwarzschild_u.h  bh_rt_status.h
kernel/src/: bh_rt_rk4.c  bh_rt_schwarzschild_3d.c  bh_rt_schwarzschild_phase2.c  bh_rt_schwarzschild_phase2_batch.c  bh_rt_schwarzschild_u.c  demo_harmonic.c  demo_schwarzschild_3d.c  demo_schwarzschild_phase2_batch.c  demo_schwarzschild_u.c
ml/: README.md  __init__.py  dataset.py  runtime_gate.py  schema.py  surrogate.py
src/blackhole_ray_tracer/: __init__.py  main.py  native_phase2.py  native_phase2_cuda.py  phase1.py  preview.py  (+17 more)
tests/: test_bridge_native_phase2.py  test_cli.py  test_kernel_harmonic_parity.py  test_kernel_phase2_batch_parity.py  test_kernel_phase2_parity.py  test_kernel_schwarzschild_3d_parity.py  test_kernel_schwarzschild_u_parity.py  test_ml.py  test_ml_dataset.py  test_phase1_extensions.py  test_phase2.py  test_phase2_supersample.py  test_phase3_christoffel.py  test_phase3_driver.py  test_phase3_kerr.py  test_phase3_render.py
