[project]
name = "blackhole-ray-tracer"
version = "0.1.0"
description = "Black hole ray tracer with C geodesic kernel and Python orchestration."
readme = "README.md"
authors = [{ name = "gabegaines24", email = "gabegaines24@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["numpy>=2.2.0", "rich>=14.0.0"]

[project.scripts]
blackhole-ray-tracer = "blackhole_ray_tracer.main:main"
kerr-render = "blackhole_ray_tracer.phase3_driver:main"

[dependency-groups]
dev = ["pytest>=8.3.0", "ruff>=0.11.0", "mypy>=1.15.0"]
viz = ["matplotlib>=3.10.0", "streamlit>=1.44.0"]
ml = ["torch>=2.6.0", "scikit-learn>=1.6.0", "pandas>=2.2.0"]

[build-system]
requires = ["setuptools>=69", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["blackhole_ray_tracer*", "ml*"]
